* The statistics center was no longer collapsing years automatically. (Stats template) [Bug 4011]  * Minor change regarding calendar month names headers. (index.css)
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9642 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -3298,7 +3298,6 @@ span.statsbar span
 {
 	height: 23px;
 	line-height: 27px;
-	margin: 0 1px;
 }
 #month_grid table
 {
